--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -11,7 +11,9 @@
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
-       <%= render partial: 'prototype', collection: @prototypes %>
+    <% @prototypes.each do |prototype| %>
+       <%= render partial: 'prototype', locals: { prototype: prototype } %>
+       <% end %>
     </div>
   </div>
 </main>
