--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,5 +1,6 @@
 
 <div class="card">
+  
 <%= link_to image_tag(prototype.image, class: :card__img), prototype_path(prototype.id)  %>
   
   <div class="card__body">
@@ -7,7 +8,8 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to "#{current_user.user_name}", prototype_path(prototype.id), class: :card__user %>
+    <%= link_to prototype.title, prototype_path(prototype.id), class: :card__user %>
   </div>
+
 
 </div>
