--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= "ユーザー名さんの情報"%>
+        <%= @user_name %>さんの情報
       </h2>
       <table class="table">
         <tbody>
@@ -12,25 +12,27 @@
           </tr>
           <tr>
             <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= "#{current_user.user_profile}"  %></td>
+            <td class="table__col2"><%= @user_profile %></td>
           </tr>
           <tr>
             <th class="table__col1">所属</th>
-            <td class="table__col2"><%= "#{current_user.user_occupation}" %></td>
+            <td class="table__col2"><%= @user_occupation %></td>
           </tr>
           <tr>
             <th class="table__col1">役職</th>
-            <td class="table__col2"><%= "#{current_user.user_position}" %></td>
+            <td class="table__col2"><%= @user_position %></td>
           </tr>
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= @user_name%>
+        <%= @user_name%>さんのプロトタイプ
       </h2>
       <div class="user__card">
         <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
-        <%= render partial: "prototype", collection: @prototypes %>
-      </div>
+   <% @prototypes.each do |prototype| %>
+       <%= render partial: 'prototype', locals: { prototype: prototype } %>
+       <% end %>
+   </div>
     </div>
   </div>
 </div>
