--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -4,7 +4,7 @@
      <% if user_signed_in? %>
       <div class="greeting"> 
    <h3>こんにちは
-         <%= link_to "#{current_user.user_name}", user_path(current_user.id), class: :greeting__link %>
+         <%= link_to "#{current_user.user_name}", user_path(current_user), class: :greeting__link %>
       さん</h3>
       </div>
       <% end %>
