--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -8,7 +8,7 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to prototype.title, prototype_path(prototype.id), class: :card__user %>
+    <%= link_to prototype.user.user_name, user_path(prototype.id), class: :card__user %>
   </div>
 
 
