--- a/app/views/users/_prototype.html.erb
+++ b/app/views/users/_prototype.html.erb
@@ -7,7 +7,7 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to @user_name, root_path(prototype.id), class: :card__user %>
+    <%= link_to @user_name, user_path(prototype.user_id), class: :card__user %>
   </div>
 
 </div>
